<resources>
    <string name="app_name">EqPlot</string>
    <string name="app_title">The Project One</string>
    <string name="app_title2">Test</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mult">X</string>
    <string name="divide">/</string>
    <string name="modulus">%</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="raise">^</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="square">x^2</string>
    <string name="cube">x^3</string>
    <string name="sqrt">sqrt</string>
    <string name="nul">NUL</string>
    <string name="history">History</string>
    <string name="advanced">Advanced</string>
    <string name="basic">Basic</string>
    <string name="plot">Plot</string>
    <string name="open_brace">(</string>
    <string name="close_brace">)</string>
    <string name="variablex">x</string>
    <string name="variabley">y</string>
    <string name="exX">*</string>
    <string name="sup2"><sup>2</sup></string>
    <string name="sup3"><sup>3</sup></string>
    <string name="sample">Sample Plots</string>
    <string name="left">-200</string>
    <string name="right">200</string>
    <string name="norm">Normalize</string>
    <string name="tip">Ranges For X-Axis</string>
    <string name="log10">LOG10</string>
    <string name="res">Resolution</string>
</resources>
